feat(collections): add to pinned modify spec next step 5
